...
import com.jogasoft.moviefinder.movie.data.MovieCategory
import com.jogasoft.moviefinder.movie.ui.component.MovieItemImageLoader
import com.jogasoft.moviefinder.movie.ui.component.MovieItemNoImagePlaceholder
import com.jogasoft.moviefinder.movie.ui.viewModel.MovieCategoryListUiState

// Test tags
const val MovieCategoryListLazyColumnTestTag = "MovieCategoryListLazyColumnTestTag"

@Composable
fun MovieCategoryListScreen(
    modifier: Modifier = Modifier,
    uiState: MovieCategoryListUiState,
    navigateToMovieDetail: (Int) -> Unit,
...
