...
import com.jogasoft.moviefinder.ui.component.MovieItemImageLoader
import com.jogasoft.moviefinder.ui.component.MovieItemNoImagePlaceholder
import com.jogasoft.moviefinder.ui.theme.MovieFinderTheme
import com.jogasoft.moviefinder.ui.viewModel.HomeUiState

// Test tags
const val HomeLazyColumnTestTag = "HomeLazyColumnTestTag"

@Composable
fun HomeScreen(
    modifier: Modifier = Modifier,
    uiState: HomeUiState,
    navigateToMovieDetail: (Int) -> Unit,
...
